@@ -168,29 +168,21 @@ export const RESEARCHES: IResearchData[] = [
     name: "Scavenging",
     description: "Increase materials gain from battles",
     type: TECHNOLOGIES.Naval,
-    researchToUnlock:["ns1"],
+    researchToUnlock: ["ns1"],
     materialMulti: 1,
     battleMulti: [
       { materialId: "M", multi: 1 },
       { materialId: "E", multi: 1 }
     ],
     inspirationDescription: "Defeat an enemy"
-  },{
+  },
+  {
     id: "ns1",
     name: "Assimilation",
     description: "Increase components gain from battles",
     type: TECHNOLOGIES.Naval,
-    battleMulti: [
-      { materialId: MAT_IDS.Components, multi: 1 }
-    ],
+    battleMulti: [{ materialId: MAT_IDS.Components, multi: 1 }],
     inspirationDescription: "Defeat an enemy"
-  },
-  {
-    id: "me",
-    name: "Mega Structures",
-    description: "Unlock Megastructures",
-    type: TECHNOLOGIES.CivilEngineering,
-    unitsToUnlock: megastructures
   },
   //#endregion
   //#region Search
